Fix scanlines on footer

--- a/static/css/classic-mac.css
+++ b/static/css/classic-mac.css
@@ -55,6 +55,12 @@ body::before {
   z-index: 1000;
 }
 
+/* Footer badges - lift above scanlines */
+.site-footer img {
+  position: relative;
+  z-index: 1001;
+}
+
 /* Main container */
 .site-container {
   max-width: 720px;
