Add line break between footer text and 88x31s

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -19,7 +19,7 @@
   			<script id="umaring_js" src="https://umaring.mkr.cx/ring.js?id=kush"></script>
   			<div id="umaring"></div><br>
         © 2017 - {{ now.Year }} · Built w/ <a href="https://gohugo.io">Hugo</a> + a custom theme.<br>
-        Views are my own and not representative of any organization/institution.
+        Views are my own and not representative of any organization/institution.<br>
         <a href="https://umass.edu"><img src="https://suobset.github.io/finechive-helper/88x31/umass.png"></a>
 				<a href="https://firefox.com"><img src="https://suobset.github.io/finechive-helper/88x31/firefox.gif"></a>
 				<a href="https://pages.github.com"><img src="https://suobset.github.io/finechive-helper/88x31/ghPages.gif"></a>
