--- a/static/css/classic-mac.css
+++ b/static/css/classic-mac.css
@@ -1,4 +1,9 @@
-/* Synthwave '84 Terminal + IBM Plex Mono */
+/*
+Kushagra Srivastava: Personal Website
+
+This CSS was created specifically for my personal website.
+I plan on to create a standalone Hugo theme based on this theming.
+*/
 
 @font-face {
   font-family: 'IBM Plex Mono';
