--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -14,6 +14,7 @@
   <nav class="site-nav">
     <a href="{{ .Site.BaseURL }}">Home</a>
     {{ with .Site.GetPage "/about" }}<a href="{{ .Permalink }}">About</a>{{ end }}
+    {{ with .Site.GetPage "/projects" }}<a href="{{ .Permalink }}">Projects</a>{{ end }}
     <div class="dropdown">
       <button class="dropdown-toggle" onclick="this.parentElement.classList.toggle('open')">
         More ▾
